--- a/index.html
+++ b/index.html
@@ -6,11 +6,18 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <img src="img/banner.jpg" class="imgbanner">
+    
 
     <div class="principal">
 
-        <h1>Sobre la Barbería Alura</h1>
+        <header>
+            <h1 class="tituloprincipal">Barberia Alura</h1>
+        </header>
+        
+
+        <img src="img/banner.jpg" class="imgbanner">
+
+        <h2 class="titulocentralizado">Sobre la Barbería Alura</h2>
 
         <p id="mision">Ubicada en el corazón de la ciudad, la <strong>barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba.
         Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. </p>
@@ -24,7 +31,7 @@
     </div>
 
     <div class="secundario">
-        <h2>diferenciales</h2>
+        <h3 class="titulocentralizado">diferenciales</h3>
         <ul class="listaul">
             <li class="lista">atencion personalizada a nuestros clientes</li>
             <li class="lista">profesionales calificados</li>
