--- a/productos.html
+++ b/productos.html
@@ -4,18 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>productos</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="productos.css">
+    
 
 </head>
 
 <body>
     <header>
-        <h1><img src="img-productos/logo.png"></h1>
-        <ul>
-            <li>home</li>
-            <li>productos</li>
-            <li>contacto</li>
-        </ul>
+        <div class="caja">
+            <h1><img src="img-productos/logo.png"></h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html">productos</a></li>
+                    <li><a href="contacto.html">contacto</a></li>
+                </ul>
+            </nav>
+        </div>
 
     </header>
     
