--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width"> <!--para adaptarse a dispositivos mobiles-->
     <title>BarberiaAlura</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
